FitLifeProLatest/force-app/main/default/objects/Workout_Class__c/Workout_Class__c.object-meta.xml
<CustomObject>
    <label>Workout Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workout Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>