FitLifeProLatest/force-app/main/default/objects/Workout_Class__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>Time</type>
</CustomField>